styling fixes for batch/csv feature on small devices

--- a/cyan_angular/src/app/batch/batch.component.css
+++ b/cyan_angular/src/app/batch/batch.component.css
@@ -1,12 +1,60 @@
+@media screen and (min-width: 980px) {
+}
+
+@media screen and (max-width: 979px) and (min-width: 401px) {
+}
+
+@media screen and (max-width: 400px) {
+	.jobs_tab_group {
+		width: 100vw;
+	}
+	.mat-column-numLocations, .mat-column-jobNum, .mat-column-jobStatus {
+		/*max-width: 10%;*/
+	}
+
+	.mat-column-receivedDatetime, .mat-column-finishedDatetime {
+		/*max-width: 15%;*/
+	}
+	.mat-table {
+	  overflow-x: scroll;
+	}
+
+	.mat-cell,
+	.mat-header-cell {
+	  word-wrap: initial;
+	  display: table-cell;
+	  padding: 0px 10px;
+	  line-break: unset;
+	  width: 100%;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  vertical-align: middle;
+	}
+
+	.mat-row,
+	.mat-header-row {
+	  display: table-row;
+	}
+}
+
 .jobs_tab_group {
 	height: 100%;
 	width: 100%;
 }
 
 .table-responsive {
-	overflow-y: scroll;
+	/*overflow-y: scroll;*/
+	overflow: scroll;
 	height: 80%;
 	width: 100%;
+}
+/*.table-responsive thead th {
+	position: sticky;
+	top: 0;
+}*/
+::ng-deep.mat-header-cell {
+	position: sticky;
+	top: 0;
 }
 
 .exit-button {
@@ -16,6 +64,7 @@
 
 ::ng-deep.mat-dialog-container {
 	overflow: unset;
+	height: unset;
 }
 
 .cancel-icon:hover {
